# pyrrha

./: .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  img  index.html  mkdocs.yml  pyproject.toml  setup.py  versions.json  zensical.toml
.github/workflows/: build-push.yml  doc dev.yml  doc.yml  release.yml
changelog/: index.html
ci/ghidra/: Dockerfile  build.sh
ci/ida/: .dockerignore  Dockerfile  Dockerfile.final  build.sh
ci/pyrrha/: Dockerfile
contributing/dev_mapper/: index.html
dev/: 404.html  index.html  search.json  sitemap.xml
dev/changelog/: index.html
dev/contributing/dev_mapper/: index.html
dev/disassembler/: index.html
dev/installation/: index.html
dev/license/: index.html
dev/mappers/: index.html
dev/mappers/exe-decomp/: index.html
dev/mappers/fs/: index.html
dev/mappers/fs-cg/: index.html
dev/mappers/mappers/: index.html
dev/search/: search_index.json
docs/: disassembler.md  index.md  installation.md
docs/.snippets/: diffing_pyrrha_exports.py
docs/contributing/: dev_mapper.md
docs/mappers/: exe-decomp.md  fs-cg.md  fs.md  mappers.md
examples/: diffing_pyrrha_exports.py  solution.py
installation/: index.html
license/: index.html
mappers/fs/: index.html
mappers/fs-cg/: index.html
mappers/mappers/: index.html
search/: search_index.json
src/pyrrha/: __init__.py  __main__.py  db.py  filesystem.py  mapper.py
src/pyrrha_mapper/: __init__.py  __main__.py  exceptions.py  filesystem.py  imports_mapper.py  intercg.py  types.py
src/pyrrha_mapper/backend/: __init__.py  base.py  ghidra.py  ida.py
src/pyrrha_mapper/common/: __init__.py  binary_export.py  filesystem_mapper.py  objects.py
src/pyrrha_mapper/exedecomp/: __init__.py  binmapper.py  decomp_mapper.py  decompile.py
src/pyrrha_mapper/fs/: __init__.py  filesystem.py  filesystem_objects.py  imports_mapper.py
src/pyrrha_mapper/intercg/: __init__.py  binary.py  fwmapper.py  loader.py  pyrrha_dump.py
src/pyrrha_mapper/mappers/: __init__.py  decomp_mapper.py  decomp_objects.py  imports_mapper.py  intercg_bin_loader.py  intercg_mapper.py  objects.py
src/pyrrha_mapper/mappers/exedecomp/: binmapper.py  decompile.py
src/pyrrha_mapper/mappers/fs/: filesystem.py  imports_mapper.py
src/pyrrha_mapper/mappers/intercg/: binary.py  fwmapper.py  pyrrha_dump.py
tests/: cli.py  conftest.py  test_cli.py  test_decomp_mapper.py  test_decomp_objects.py  test_filesystem_objects.py  test_imports_mapper.py  test_intercg_bin_loader.py  test_intercg_mapper.py  test_main.py
tests/test_fw/lib/: ld-linux.so.3  ld-linux.so.3.quokka  libc.so.6  libcrypto.so.1.1  libdl.so.2  libdl.so.2.quokka  libpthread.so.0  libpthread.so.0.quokka  libssl.so.1.1  libssl.so.1.1.quokka
v1.0.0/: 404.html  index.html  sitemap.xml
v1.0.0/changelog/: index.html
v1.0.0/contributing/dev_mapper/: index.html
v1.0.0/installation/: index.html
v1.0.0/license/: index.html
v1.0.0/mappers/exe-decomp/: index.html
v1.0.0/mappers/fs/: index.html
v1.0.0/mappers/fs-cg/: index.html
v1.0.0/mappers/mappers/: index.html
v1.0.0/search/: search_index.json
v1.0.1/: 404.html  index.html  sitemap.xml
v1.0.1/changelog/: index.html
v1.0.1/contributing/dev_mapper/: index.html
v1.0.1/installation/: index.html
v1.0.1/license/: index.html
v1.0.1/mappers/exe-decomp/: index.html
v1.0.1/mappers/fs/: index.html
v1.0.1/mappers/fs-cg/: index.html
v1.0.1/mappers/mappers/: index.html
v1.0.1/search/: search_index.json
v2.0.0/: 404.html  index.html  sitemap.xml
v2.0.0/changelog/: index.html
v2.0.0/contributing/dev_mapper/: index.html
v2.0.0/installation/: index.html
v2.0.0/license/: index.html
v2.0.0/mappers/: index.html
v2.0.0/mappers/exe-decomp/: index.html
v2.0.0/mappers/fs/: index.html
v2.0.0/mappers/fs-cg/: index.html
