# -*- coding: utf-8 -*-

#  Copyright 2023 Quarkslab
#
#  Licensed under the Apache License, Version 2.0 (the "License");
#  you may not use this file except in compliance with the License.
#  You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
#  Unless required by applicable law or agreed to in writing, software
#  distributed under the License is distributed on an "AS IS" BASIS,
#  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  See the License for the specific language governing permissions and
#  limitations under the License.

[build-system]
requires = [
    'setuptools',
    'swig'
]
build-backend = 'setuptools.build_meta'

[project]
name = 'pyrrha'
authors = [
    { name = 'Eloïse Brocas', email = 'ebrocas@quarkslab.com' },
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Programming Language :: Python :: 3',
    'Operating System :: POSIX :: Linux',
    'Topic :: Security',
    'Environment :: Console',
]
dependencies = [
    'click',
    'lief',
]
version = '0.0.1'

[project.scripts]
pyrrha = 'pyrrha:pyrrha'